# asac-fc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build_flash_and_monitor
cad/: Body-Top.stl  README.md  asac-fc-frame-rev-a.FCStd1  outline_vbat.dxf  pcb-rev-a.FCStd
cad/3D-print/: Body-Lower.stl  LeftArm-rev-a.stl  RigthArm-rev-a.stl
cad/freecad/: asac-fc-frame-rev-a.FCStd  asac-fc-frame-rev-a.FCStd1  outline.dxf  pcb-rev-a.FCStd1  pcb-rev-b.FCStd  pcb-rev-b.FCStd1  pcb-rev-b.dxf
docs/: README.md  control.drawio  index.md  serial_4way.md
docs/blog/: Rev-A_2023-03-30.md  Starting_2022-09-10.md
documents/: README.md
include/: asac_fc.h  battery.h  battery_adc.h  controller.h  ibus.h  imu.h  led.h  log.h  machine.h  mavlink_params.h  motor.h  motor_mixer.h  msp.h  pid.h  pid_controller.h  receiver.h  serial_4_way.h  serial_mavlink.h  settings.h  state.h  telemetry.h  uart_test.h  vsrtos.h  vstp.h
include/drivers/: bmi270_asac.h  mpu6050.h  oneshot.h  oneshot.pio  uart_rx.pio  uart_tx.pio
include/mavlink/asac/: asac.h  mavlink.h  testsuite.h  version.h
include/mavlink/common/: common.h  mavlink.h  version.h
include/mavlink/minimal/: mavlink.h  minimal.h  version.h
include/mavlink/standard/: mavlink.h  standard.h  version.h
include/rc/: crsf.h  ibus.h  rc.h
kicad/asac-fc-rev-a/: asac-fc-rev-a-B_Cu.gbr  asac-fc-rev-a-B_Mask.gbr  asac-fc-rev-a-B_Paste.gbr  asac-fc-rev-a-B_Silkscreen.gbr  asac-fc-rev-a-Edge_Cuts.gbr  asac-fc-rev-a-F_Cu.gbr  asac-fc-rev-a-F_Mask.gbr  asac-fc-rev-a-F_Paste.gbr  asac-fc-rev-a-F_Silkscreen.gbr  asac-fc-rev-a-NPTH.drl  asac-fc-rev-a-PTH.drl  asac-fc-rev-a-bottom.pos  asac-fc-rev-a-job.gbrjob  asac-fc-rev-a-top.pos  asac-fc-rev-a.csv  asac-fc-rev-a.kicad_pcb  asac-fc-rev-a.kicad_prl  asac-fc-rev-a.kicad_pro  asac-fc-rev-a.kicad_sch  asac-fc-rev-a.xml  fp-info-cache
kicad/asac-fc-rev-a/bom/: ibom.html
kicad/asac-fc-rev-b/: asac-fc-rev-b-B_Cu.gbr  asac-fc-rev-b-B_Mask.gbr  asac-fc-rev-b-B_Paste.gbr  asac-fc-rev-b-B_Silkscreen.gbr  asac-fc-rev-b-Edge_Cuts.gbr  asac-fc-rev-b-F_Cu.gbr  asac-fc-rev-b-F_Mask.gbr  asac-fc-rev-b-F_Paste.gbr  asac-fc-rev-b-F_Silkscreen.gbr  asac-fc-rev-b-In1_Cu.gbr  asac-fc-rev-b-In2_Cu.gbr  asac-fc-rev-b-NPTH-drl_map.gbr  asac-fc-rev-b-NPTH.drl  asac-fc-rev-b-PTH-drl_map.gbr  asac-fc-rev-b-PTH.drl  asac-fc-rev-b-job.gbrjob  asac-fc-rev-b.csv  asac-fc-rev-b.kicad_pcb  asac-fc-rev-b.kicad_prl  asac-fc-rev-b.kicad_pro  asac-fc-rev-b.kicad_sch  asac-fc-rev-b.xml  fp-info-cache
kicad/asac-fc-rev-b/jlcpcb/: project.db
kicad/asac-fc-rev-b/jlcpcb/gerber/: asac-fc-rev-b-CuBottom.gbr  asac-fc-rev-b-CuIn1.gbr  asac-fc-rev-b-CuIn2.gbr  asac-fc-rev-b-CuTop.gbr  asac-fc-rev-b-EdgeCuts.gbr  asac-fc-rev-b-MaskBottom.gbr  asac-fc-rev-b-MaskTop.gbr  asac-fc-rev-b-NPTH.drl  asac-fc-rev-b-PTH.drl  asac-fc-rev-b-PasteBottom.gbr  asac-fc-rev-b-PasteTop.gbr  asac-fc-rev-b-SilkBottom.gbr  asac-fc-rev-b-SilkTop.gbr  asac-fc-rev-b-VScore.gbr
kicad/asac-fc-rev-b/jlcpcb/production_files/: BOM-asac-fc-rev-b.csv  CPL-asac-fc-rev-b.csv
src/: asac_fc.c  battery.c  battery_adc.c  controller.c  ibus.c  imu.c  led.c  main.c  mavlink_params.c  motor.c  motor_mixer.c  msp.c  pid.c  pid_controller.c  receiver.c  serial_mavlink.c  settings.c  state.c  telemetry.c  uart_test.c  vsrtos.c  vstp.c
src/drivers/: bmi270_asac.c  mpu6050.c  oneshot.c
src/rc/: crsf.c  ibus.c
tools/: README.md  elrs_parser.py  flash.sh  gen_log_params.py  gen_mavlink  mem_addr.html  mem_addr.py  monitor.py  msp.py  msp_client.py  parse_ibus.py  serial_plotter.py  test_rx_bw.py
tools/c_tests/: Makefile  crc8.c  elrs_test.c  serial_proxy.py  smartaudio_test.c
tools/cal-frontend/: package-lock.json  package.json
tools/cal-frontend/src/: App.css  App.js  Backend.js  index.css
tools/cal-frontend/src/ControlHeader/: ControlHeader.css  ControlHeader.js
tools/cal-frontend/src/DebugConsole/: DebugConsole.css  DebugConsole.js
tools/cal-frontend/src/Param/: Param.js  param.css
tools/client/: gui.py
tools/grapher-frontend/: README.md  package-lock.json  package.json
tools/grapher-frontend/src/: App.js  Backend.js  History.js  LogTypes.js  Tab.js  Tabs.js  index.css  index.js
tools/gui/: gui.py  log_types.py  telemetry_client.py  telemetry_client_logger.py
tools/mavlink-client/: client.py  generate  main.py  mavlink.py
tools/mavlink-client/message_definitions/v1.0/: asac.xml
